# Course_work

Kursovaya/: CMakeLists.txt  Resourses.qrc  account.cpp  account.h  authentification.cpp  authentification.h  authentification.ui  available_chars.cpp  available_chars.h  description.cpp  description.h  description.ui  enter.cpp  enter.h  enter.ui  keyboard.cpp  keyboard.h  keyboard.ui  level.cpp  level.h  level.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pause.cpp  pause.h  pause.ui  registration.cpp  registration.h  registration.ui  report.cpp  report.h  report.ui  savedprogress.cpp  savedprogress.h  savedprogress.ui  singletask.cpp  singletask.h  singletask.ui  (+3 more)
Kursovaya/Resourses/Information/: read_me.html
